# axi-mcp-proxy

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  dogfood.ncl  package.json
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/superpowers/specs/: 2026-04-12-examples-e2e-design.md
examples/dogfood/: config.ncl
examples/minimal/: config.ncl
examples/nested/: config.ncl
examples/repo_context/: config.ncl
lib/: axi.ncl  example_repo_context.ncl
npm/@axi-mcp-proxy/darwin-arm64/: package.json
npm/@axi-mcp-proxy/darwin-x64/: package.json
npm/@axi-mcp-proxy/linux-arm64/: package.json
npm/@axi-mcp-proxy/linux-x64/: package.json
npm/@axi-mcp-proxy/win32-arm64/: package.json
npm/@axi-mcp-proxy/win32-x64/: package.json
npm/axi-mcp-proxy/: bin.js  package.json
rules/: clippy-allow-requires-reason.yml
src/: lib.rs  main.rs
src/axi/: formatter.rs  help.rs  mod.rs
src/config/: loader.rs  mod.rs  types.rs
src/engine/: aggregate.rs  graph.rs  mod.rs  resolve.rs  transform.rs
src/proxy/: server.rs
src/toon/: encoder.rs
src/upstream/: client.rs  pool.rs
tests/: check_config_cli.rs  config_integration.rs  examples_e2e.rs  integration_test.rs
tests/fixtures/failure/both_transports/: config.ncl
tests/fixtures/failure/cycle_detection/: config.ncl
tests/fixtures/failure/empty_aggregates/: config.ncl
tests/fixtures/failure/empty_next_steps/: config.ncl
tests/fixtures/failure/invalid_aggregate/: config.ncl
tests/fixtures/failure/invalid_auth_type/: config.ncl
tests/fixtures/failure/invalid_filter/: config.ncl
tests/fixtures/failure/invalid_param_type/: config.ncl
tests/fixtures/failure/no_transport/: config.ncl
tests/fixtures/failure/too_many_visible_fields/: config.ncl
tests/fixtures/failure/unknown_next_step/: config.ncl
tests/fixtures/failure/unknown_param_ref/: config.ncl
tests/fixtures/success/cmd_upstream/: config.ncl
tests/fixtures/success/optional_params/: config.ncl
tests/fixtures/success/param_refs/: config.ncl
