[package]
name = "axi-mcp-proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
    "transport-sse",
    "transport-sse-server",
] }
nickel-lang-core = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio-util = "0.7"
which = "7"
